err/xdv.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xdv'...
Compiling './lib/python3.5/site-packages/xdv/run.py'...
***   File "./lib/python3.5/site-packages/xdv/run.py", line 84
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xdv/tests'...
Listing './lib/python3.5/site-packages/xdv/tests/001'...
Listing './lib/python3.5/site-packages/xdv/tests/002'...
Listing './lib/python3.5/site-packages/xdv/tests/003'...
Listing './lib/python3.5/site-packages/xdv/tests/004'...
Listing './lib/python3.5/site-packages/xdv/tests/005'...
Listing './lib/python3.5/site-packages/xdv/tests/006'...
Listing './lib/python3.5/site-packages/xdv/tests/007'...
Listing './lib/python3.5/site-packages/xdv/tests/008'...
Listing './lib/python3.5/site-packages/xdv/tests/009'...
Listing './lib/python3.5/site-packages/xdv/tests/010'...
Listing './lib/python3.5/site-packages/xdv/tests/011'...
Listing './lib/python3.5/site-packages/xdv/tests/012'...
Listing './lib/python3.5/site-packages/xdv/tests/013'...
Listing './lib/python3.5/site-packages/xdv/tests/014'...
Listing './lib/python3.5/site-packages/xdv/tests/before-prepend-append-after'...
Listing './lib/python3.5/site-packages/xdv/tests/esi'...
Listing './lib/python3.5/site-packages/xdv/tests/inline-xsl-directives'...
Listing './lib/python3.5/site-packages/xdv/tests/modify-theme'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-copy-1'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-copy-2'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-copy-3'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-copy-4'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-replace-1'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-replace-2'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-replace-3'...
Listing './lib/python3.5/site-packages/xdv/tests/multi-replace-4'...
Listing './lib/python3.5/site-packages/xdv/tests/nested-rules-for-xinclude'...
Listing './lib/python3.5/site-packages/xdv/tests/null-if-content'...
Listing './lib/python3.5/site-packages/xdv/tests/pre-line-endings'...
Listing './lib/python3.5/site-packages/xdv/tests/ssi'...
Compiling './lib/python3.5/site-packages/xdv/tests/tests.py'...
***   File "./lib/python3.5/site-packages/xdv/tests/tests.py", line 57
    print "WARNING:", "compiled.xsl has CHANGED"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xdv/tests/update-namespace'...
Listing './lib/python3.5/site-packages/xdv/tests/xinclude'...
Listing './lib/python3.5/site-packages/xdv-0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
